--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 input {
-    width: 10ch ;
+    width: 4ch ;
     text-align: right;
 }
 
@@ -18,6 +18,7 @@ input {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     table-layout: auto;
+    width: 100%
 }
 
 #equations_table thead {
@@ -32,4 +33,12 @@ input {
     padding: 8px;
 }
 
+td:nth-child(1) {
+    width: 80%;
+}
+
+
+td:nth-child(2) {
+    width: 20%;
+}
 #equations_table tr:hover {background-color: #ddd;}
